research: live HyperAlloc capture findings
Adds ## Live Capture Findings section to gc-log-research-notes.md.
Three 60-second HyperAlloc runs on thinkstation (OpenJDK 21.0.11):
G1GC (100 MB/s, 1.9 MB JFR, 110 GC cycles), ZGC (50 MB/s, 583 KB JFR,
54 cycles), Shenandoah (50 MB/s, 597 KB JFR, 14 cycles). Confirms
jdk.ZUnmap never fires even in JDK 21 (count=0), validates full Task 2
mapping table, and documents key volume findings (GCPhaseParallel=32,845
in 60s under G1) to inform gc-log.jfc event selection.